P4ADEV-2348 update test